# HomeWork_6_Web

./: create_db.py  main.py  push_data.py  pyproject.toml  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  sqlite.db  sqlite.sql
